more notes added

--- a/13_css/mimic.html
+++ b/13_css/mimic.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" style="font-family:sans-serif; background:DimGrey">
+<!--
+Metamorphosis: Eric Sohel, Yuki Feng, Maya Mori, Aleksandra Shifrina
+SoftDev
+k13 -- intro to CSS
+2022-10-18
+time spent: 1.2
+ -->
+
+<html lang="en" style="font-family:sans-serif; background:DimGrey">
   <head>
     <meta charset="utf-8">
     <title> k13 </title>
@@ -12,7 +20,7 @@
     <h1 style="text-align:center; background:silver; color:white;"> h1 foo </h1>
 
     <div class="main-text" style="display:flex">
-      <div class="navbar" style="padding:20px;width:700px;margin-right:50px;display:inline-block">
+      <div class="navbar" style="padding:20px;width:700px;margin-right:50px">
       <!-- <div class="navbar" style="display:inline-block;width:180px;"> -->
         <h3> nav foo </h3>
           <p style="color:white"> dis <br>
