--- a/13_css/mimic.html
+++ b/13_css/mimic.html
@@ -4,7 +4,7 @@ Metamorphosis: Eric Sohel, Yuki Feng, Maya Mori, Aleksandra Shifrina
 SoftDev
 k13 -- intro to CSS
 2022-10-18
-time spent: 1.2
+time spent: 1.5
  -->
 
 <html lang="en" style="font-family:sans-serif; background:DimGrey">
@@ -14,23 +14,70 @@ time spent: 1.2
     <link rel=“stylesheet”
       type=“text/css”
       href=“mimic.css”>
+
+      <style>
+        h1 {
+          text-align: center;
+          background: silver;
+          color: white;
+        }
+
+        body {
+          background: grey;
+        }
+
+        .main-text {
+          display: flex;
+        }
+
+        .navbar {
+          padding: 20px;
+          width: 700px;
+          margin-right: 50px;
+        }
+
+        .navbar p{
+          color: white;
+        }
+
+        .main-foo {
+          margin: 10px;
+        }
+
+        .footer {
+          background: #505050;
+          color: grey;
+          text-align: right;
+          padding: 1px;
+          padding-right: 10px;    
+        }
+
+      </style>
+
     </head>
 
-  <body style="background:grey">
-    <h1 style="text-align:center; background:silver; color:white;"> h1 foo </h1>
+  <!-- <body style="background:grey"> -->
+  <body>
+    <h1> h1 foo </h1>
 
-    <div class="main-text" style="display:flex">
-      <div class="navbar" style="padding:20px;width:700px;margin-right:50px">
+    <!-- <div class="main-text" style="display:flex"> -->
+    <div class="main-text">
+
+      <div class="navbar">
+
+      <!-- <div class="navbar" style="padding:20px;width:700px;margin-right:50px"> -->
       <!-- <div class="navbar" style="display:inline-block;width:180px;"> -->
         <h3> nav foo </h3>
-          <p style="color:white"> dis <br>
+          <!-- <p style="color:white"> dis <br> -->
+          <p> dis <br>
               dat <br>
               de udda ting
             </p>
       </div>
 
       <!-- <div class="main-foo" style="display:inline-block;margin-left:200px"> -->
-            <div class="main-foo" style="margin:10px">
+      <!-- <div class="main-foo" style="margin:10px"> -->
+      <div class="main-foo">
         <h2> main foo heading </h2>
 
         <p>Tatooine at-at imperial shuttle bb-8 bowcaster lightsaber bowcaster arc-170 starfighter slave 1 kamino bowcaster arc-170 starfighter bb-8 alderaan, kamino iktochi arc-170 starfighter mustafar pulse cannon. Sandcrawler chewbacca mustafar keshiri slugthrower at-at scatter gun, neimoidian coruscant jawa hoth, coruscant r2-d2 tie fighter lightsaber naboo bb-8 ion cannon blaster alderaan. Naboo boba fett mirialan tie. Fighter bespin kamino. Slave 1 arc-170 starfighter hoth coruscant scatter gun naboo. Darth vader coruscant mirialan twi'lek seismic, charge blaster y-wing, scatter gun bb-8 chewbacca gungan. Scatter gun bespin star destroyer bespin rodian gungan.</p>
@@ -41,7 +88,8 @@ time spent: 1.2
       </div>
     </div>
 
-    <div class="footer" style="background:#505050; color:grey; text-align:right;padding:3px">
+    <!-- <div class="footer" style="background:#505050; color:grey; text-align:right;padding:3px"> -->
+    <div class="footer">
       <p> Copyright © 2022 Metamorphosis </p>
     </div>
 
