external style done

--- a/13_css/mimic.html
+++ b/13_css/mimic.html
@@ -7,15 +7,16 @@ k13 -- intro to CSS
 time spent: 1.5
  -->
 
-<html lang="en" style="font-family:sans-serif; background:DimGrey">
+<!-- <html lang="en" style="font-family:sans-serif; background:DimGrey"> -->
+<html lang="en">
+
   <head>
     <meta charset="utf-8">
     <title> k13 </title>
-    <link rel=“stylesheet”
-      type=“text/css”
-      href=“mimic.css”>
+    <link href="mimic.css" rel="stylesheet" type="text/css" />
+    <!-- <link rel=“stylesheet” type=“text/css” href=“mimic.css” /> -->
 
-      <style>
+      <!-- <style>
         h1 {
           text-align: center;
           background: silver;
@@ -49,10 +50,10 @@ time spent: 1.5
           color: grey;
           text-align: right;
           padding: 1px;
-          padding-right: 10px;    
+          padding-right: 10px;
         }
 
-      </style>
+      </style> -->
 
     </head>
 
