--- a/23_bt_mews_moriM_sohelE/index.html
+++ b/23_bt_mews_moriM_sohelE/index.html
@@ -1,3 +1,11 @@
+<!-- 
+  MEWS: Eric Sohel, Maya Mori
+  Softdev
+  k23 -- Bootstrap
+  2022-11-29
+  time spent: 1.0
+ -->
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -26,9 +34,11 @@
     </nav>
 
     <h1>Hello, world!</h1>
+    <h2> MEW: Maya Mori and Eric Sohel</h2>
     <h2> Grids </h2>
     <div class="container text-center">
       <div class="row">
+        <!-- Try replacing "col" with "col-#" where # is a number >= 1 -->
         <div class="col border">
           1
         </div>
@@ -60,7 +70,10 @@
     <br>
 
     <h2> Colors, shadows, buttons</h2>
-
+    <p> Bootstrap has a few color ultilities</p>
+    <p>Font color changes automatically depending on the of the button</p>
+    <p> Try going to the dev console and changing "shadow" to "shadow-lg"</p>
+    <!-- Shadows -->
     <button type="button" class="btn btn-primary shadow">Primary</button>
     <button type="button" class="btn btn-secondary shadow">Secondary</button>
     <button type="button" class="btn btn-success shadow">Success</button>
@@ -73,6 +86,8 @@
     <br>
     <br>
     <h2> Tables </h2>
+    <p> Use the class "table". If you want to change the theme, use "table-{theme name}" </p>
+    <p> You can still use grid sizes for columns </p>
     <h3>Dark table</h3>
     <table class="table table-dark">
       <thead>
