--- a/24_fd_MEWS_moriM_sohelE/index.html
+++ b/24_fd_MEWS_moriM_sohelE/index.html
@@ -5,60 +5,81 @@ MEWS: Maya and Eric
 SoftDev
 K24 -- foundation, ducky stories
 2022-11-30
-time spent: __ hours
+time spent: 1.0 hrs
 -->
 
 <html class="no-js" lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <!-- <meta http-equiv="x-ua-compatible" content="ie=edge"> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Ducky gossip</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous">
   </head>
-  <body>
+  <body style="background:rgb(131, 173, 228)">
+
     <div class="grid-container">
-        <h1> Stories of the MEWS duckys (Catbat and SOMEONE) </h1>
-        <h2>  by Maya Mori and Eric Sohel </h2>
+        <div class="grid-x grid-padding-x grid-padding-y">
+            <div class="large-10 cell">
+                <div class="callout">
+                    <h1 class="text-center"> Stories of the MEWS duckies (Catbat and Eric's ducky) </h1>
+                    <h3 class="text-center">  by Maya Mori and Eric Sohel </h3>
 
-        <div class="callout">
-            <label> Select a ducky </label>
-            <select>
-                <option value="1" href="#ducky-1">Catbat</option>
-                <option value="2">Maybe this?</option>
-            </select>
-        </div>
-        <a href="#ducky-1"> Catbat</a>
-
-        <div class="large-9 cell">
-            <div class="callout">
-                <h2 id="#ducky-1"> Catbat</h2>
-                <p> Once a upon a time, some mysterious person bought Catbat. No one remembers who,
-                     but from the tag, this author believes he was from somewhere in Japan. He might have had countless
-                     relationships but who knows. No one even knows how old he is.
-                </p>
-                <p> Last year, this author decided her backpack looked too plain and decided to go 
-                    looking for a keychain around the house. Sadly, most of them were too small or broken.
-                </p>
-                <p> Sadly, Catbat was lost the day or the day after he was officially became a ducky.
-                    The other potential duckies are quivering, afraid of meeting the same fate as him
-                </p>
+                </div>
             </div>
         </div>
 
-        <div class="large-9 cell">
-            <div class="callout">
-                <h2 id="#ducky-2"> Eric's ducky</h2>
-                <p> {some details about Eric's ducky's relationships} </p>
-        </div>
+        <!-- <div class="grid-container"> -->
+            <div class="grid-x grid-padding-x grid-padding-y">
+                <div class="large-5 cell">
+                    <div class="callout">
+                        <h3> Select a ducky: </h3>
+                        <!-- links to another part of the document -->
+                        <a href="#ducky-1" class="button"> Catbat </a>
+                        <br>
+                        <a href="#ducky-2" class="button"> Eric's ducky </a>
+                    </div>
+                </div>
+            </div>
+        <!-- </div> -->
 
-        <div class="large-4 cell">
+        <div class="grid-x grid-padding-x">
+            <div class="medium-4 large-10 cell">
+                <div class="callout">
+                    <h2 id="ducky"> Catbat</h2>
+                    <img src="catbat.jpeg" alt="photo of a cat/bat keychain">
+                    <br>
+                    <br>
+                    <p> Once a upon a time, some mysterious person bought Catbat. No one remembers who,
+                        but from the tag, this author believes he was from somewhere in Japan. He might 
+                        have had countless relationships but who knows. No one even knows how old he is.
+                    </p>
+                    <p> Last year, this author decided her backpack looked too plain and decided to go 
+                        looking for a keychain around the house. Unfortunately, most of them were too
+                        small or broken. She found a small, black, odd-looking creature and decided on
+                        it. She eventually duckified the keychain to Catbat.
+                    </p>
+                    <p> Sadly, Catbat was lost the day or the day after he officially became a ducky.
+                        The other ducky candidates are quivering, afraid of meeting the same fate as him.
+                        But there are some rumors surrounding his disappearance. Did he fall off into an
+                        abyss never to be seen again? Was he stolen? Ran away? Or maybe, he fell in love 
+                        at first sight with another ducky in period 8 that day and decided to quit being 
+                        a keychain...
+                    </p>
+                </div>
+            </div>
+
+            <div class="medium-4 large-10 cell">
+                <div class="callout">
+                    <h2 id="ducky-2"> Eric's ducky</h2>
+                    <p> {some details about Eric's ducky's relationships} </p>
+            </div>
+            
+        </div>
+        <div class="large-10 cell">
             <div class="callout">
                 <h3> About the authors</h3>
+                <p> We are some SoftDev students.</p>
             </div>
         </div>
     </div>
-    <a href="" class="button">Photos</a>
-
   </body>
 </html>
