added proper headings

--- a/27_js/open_me.html
+++ b/27_js/open_me.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 <!--
-     Team Phantom Tollbooth :: Clyde Sinclair, Fierce Dragon
-     SoftDev pd0
+     Team Wandering Majestic Merciful Mice:: Maya Mori, Wilson Mach
+     SoftDev pd2
      K27 -- Basic functions in JavaScript
      2023-04-03t
 -->
