--- a/31_jsanim/index.html
+++ b/31_jsanim/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Team Ringbearers :: Frodo Baggins, Bilbo Baggins
-       SoftDev pd0
-       K31 -- canvas based JS animation
-       2023-04-25t
+  <!-- Team Wandering Majestic Merciful Mice:: Maya M., Wilson
+    SoftDev pd2
+    K31 -- canvas based JS animation
+    2023-04-25m
 
        HTML file for JavaScript canvas work
   -->
